# CMakeExample

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ProjectApp/: CMakeLists.txt  main.cpp
ProjectLib/: CMakeLists.txt  lib.cpp  lib.h
tests/: CMakeLists.txt
tests/TestProjectLib/: CMakeLists.txt  test_project_lib.cpp
